globus-gssapi-gsi (1:13.11-2+gt6.@distro@) @distro@; urgency=low

  * Packaging update to ensure priority of Globus packages

 -- Globus Toolkit <support@globus.org>  Mon, 25 Nov 2019 10:41:46 -0600

globus-gssapi-gsi (13.11-1+gt6.@distro@) @distro@; urgency=low

  * Fix leaks

 -- Globus Toolkit <support@globus.org>  Fri, 28 Sep 2018 16:47:01 +0000

globus-gssapi-gsi (13.10-1+gt6.@distro@) @distro@; urgency=low

  * Fix resource leak when loading cert directories

 -- Globus Toolkit <support@globus.org>  Fri, 31 Aug 2018 08:34:01 -0400

globus-gssapi-gsi (13.9-1+gt6.@distro@) @distro@; urgency=low

  * Set the default minimum TLS version to 1.2.  1.0 and 1.1 are deprecated.
  * Set the maximum TLS version default to 1.2.  1.3 is not yet supported.
  * use 2048 bit keys to support openssl 1.1.1

 -- Globus Toolkit <support@globus.org>  Mon, 27 Aug 2018 12:41:40 -0500

globus-gssapi-gsi (13.8-1+gt6.@distro@) @distro@; urgency=low

  * Fix version guard

 -- Globus Toolkit <support@globus.org>  Fri, 15 Jun 2018 13:15:54 -0400

globus-gssapi-gsi (13.7-1+gt6.@distro@) @distro@; urgency=low

  * Add context inquire OID support to get TLS version and cipher

 -- Globus Toolkit <support@globus.org>  Fri, 15 Jun 2018 10:14:09 -0400

globus-gssapi-gsi (13.6-1+gt6.@distro@) @distro@; urgency=low

  * enable ECDH ciphers for openssl < 1.1.0

 -- Globus Toolkit <support@globus.org>  Thu, 31 May 2018 09:56:47 -0500

globus-gssapi-gsi (13.5-2+gt6.@distro@) @distro@; urgency=low

  * Fix dbg package

 -- Globus Toolkit <support@globus.org>  Tue, 20 Feb 2018 16:18:03 -0500

globus-gssapi-gsi (13.5-1+gt6.@distro@) @distro@; urgency=low

  * don't check uid on win

 -- Globus Toolkit <support@globus.org>  Thu, 25 Jan 2018 12:41:10 -0600

globus-gssapi-gsi (13.4-1+gt6.@distro@) @distro@; urgency=low

  * Improve vhost support

 -- Globus Toolkit <support@globus.org>  Wed, 01 Nov 2017 20:27:40 +0000

globus-gssapi-gsi (13.3-1+gt6.@distro@) @distro@; urgency=low
